Use process.env.PORT for deployment compatibility

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI = mongodb+srv://sachinsharma281998:dSJr29Ts3s0wEoUW@cluster0.f7ip8fh.mongodb.net/testProject?retryWrites=true&w=majority&appName=Cluster0
+PORT: 3000
