--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI = mongodb+srv://sachinsharma281998:dSJr29Ts3s0wEoUW@cluster0.f7ip8fh.mongodb.net/testProject?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI = mongodb+srv://sachinsharma281998:dSJr29Ts3s0wEoUW@cluster0.f7ip8fh.mongodb.net/testProject?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb://localhost:27017/
 PORT: 3000
